criado o arquivo css e modificações no estilo da pagina

--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- TITLE  -->
     <title>Fonseca - Web Developer</title>
+
+    <!-- links -->
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <h1>Pedro Fonseca</h1>
@@ -14,32 +23,56 @@
       width="210px"
     />
 
-    <h2>Quem sou eu</h2>
-    <p>
-      Hello, world! Meu nome é <strong>Pedro Fonseca.</strong> Sou estudante de desenvolvimento web na <em>Trybe</em> <br />
-      Atualmente moro em <u>Belo Horizonte</u>, a capital de Minas Gerais. Estou no mundo desde <em>1992</em><br />
-      sou apaixonado por tecnologia e conhecimento. Quero deixar minha marca no <strong>mundo</strong>, atraves
-      da tecnologia. 
-    </p>
-    
-    <hr>
+    <!-- Section about -->
+    <section>
+      <h2 class="title-about">Quem sou eu</h2>
+      <p class="text-about">
+        <span class="span">Hello, world!</span> Meu nome é
+        <strong><span class="span">Pedro Fonseca.</span></strong> <br /> <br />
+        Sou estudante
+        de desenvolvimento web na <em>Trybe</em> <br />
+        Atualmente moro em <u>Belo Horizonte</u>, a capital de Minas Gerais.
+        Estou no mundo desde <em>1992</em><br />
+        sou apaixonado por tecnologia e conhecimento. Quero deixar minha marca
+        no <strong>mundo</strong>, atraves da tecnologia.
+      </p>
+    </section>
 
-    <p></em> </p> 
+    <hr />
 
-    <h2>Conhecimentos</h2>
-    <ul>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>JavaScript</li>
-      <li>Bootstrap</li>
-      <li>Git</li>
-    </ul>
+    <section>
+      <h2>Conhecimentos</h2>
+      <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+        <li>Bootstrap</li>
+        <li>Git</li>
+      </ul>
+    </section>
 
-    <h2>Você pode me encontrar nas minhas redes</h2>
-    <ul>
-      <li>Minha página no <a href="https://github.com/PedroFonseca13" target="_blank">GitHub</a></li>
-      <li>Meu perfil no <a href="https://www.linkedin.com/in/pedro-fonseca-402997a2/" target="_blank">LinkedIn</a></li>
-      <li>Meu perfil no <a href="https://twitter.com/Rikee_Fonseca" target="_blank">Twitter</a></li>
-    </ul>
+    <section>
+      <h2>Você pode me encontrar nas minhas redes</h2>
+      <ul>
+        <li>
+          Minha página no
+          <a href="https://github.com/PedroFonseca13" target="_blank">GitHub</a>
+        </li>
+        <li>
+          Meu perfil no
+          <a
+            href="https://www.linkedin.com/in/pedro-fonseca-402997a2/"
+            target="_blank"
+            >LinkedIn</a
+          >
+        </li>
+        <li>
+          Meu perfil no
+          <a href="https://twitter.com/Rikee_Fonseca" target="_blank"
+            >Twitter</a
+          >
+        </li>
+      </ul>
+    </section>
   </body>
 </html>
