Melhorias no header, about e social.

--- a/index.html
+++ b/index.html
@@ -16,61 +16,79 @@
     />
   </head>
   <body>
-    <h1>Pedro Fonseca</h1>
-    <img
-      src="img/WhatsApp Image 2021-08-11 at 09.02.04.jpeg"
-      alt="Foto de perfil de Pedro Fonseca"
-      width="210px"
-    />
+    <div>
+      <h1 class="title-header">Pedro Fonseca</h1>
+      <div class="container-header container">
+        <img
+          src="img/WhatsApp Image 2021-08-11 at 09.02.04-p.jpeg"
+          alt="Foto de perfil de Pedro Fonseca"
+          width="210px"
+          class="img-header"
+        />
+        <h3 class="description-header">Web developer</h3>
+      </div>
+    </div>
 
     <!-- Section about -->
-    <section>
-      <h2 class="title-about">Quem sou eu</h2>
-      <p class="text-about">
-        <span class="span">Hello, world!</span> Meu nome é
-        <strong><span class="span">Pedro Fonseca.</span></strong> <br /> <br />
-        Sou estudante
-        de desenvolvimento web na <em>Trybe</em> <br />
-        Atualmente moro em <u>Belo Horizonte</u>, a capital de Minas Gerais.
-        Estou no mundo desde <em>1992</em><br />
-        sou apaixonado por tecnologia e conhecimento. Quero deixar minha marca
-        no <strong>mundo</strong>, atraves da tecnologia.
-      </p>
+    <section class="container">
+      <div class="about">
+        <h2 class="title-about">Quem sou eu</h2>
+        <p class="text-about">
+          <span class="span">Hello, world!</span> Meu nome é
+          <strong><span class="span">Pedro Fonseca.</span></strong> <br />
+          <br />
+          Sou estudante de desenvolvimento web na <em>Trybe</em> <br />
+          Atualmente moro em <u>Belo Horizonte</u>, a capital de Minas Gerais.
+          Estou no mundo desde <em>1992</em><br />
+          sou apaixonado por tecnologia e conhecimento. Quero deixar minha marca
+          no <strong>mundo</strong>, atraves da tecnologia.
+        </p>
+      </div>
     </section>
 
-    <hr />
-
-    <section>
-      <h2>Conhecimentos</h2>
-      <ul>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JavaScript</li>
-        <li>Bootstrap</li>
-        <li>Git</li>
-      </ul>
+    <section class="container">
+      <div class="knowledge">
+        <h2 class="title-knowledge">Conhecimentos</h2>
+        <ul class="list-knowledge">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>Bootstrap</li>
+          <li>Git</li>
+        </ul>
+      </div>
     </section>
 
-    <section>
+    <section class="container">
       <h2>Você pode me encontrar nas minhas redes</h2>
       <ul>
         <li>
-          Minha página no
-          <a href="https://github.com/PedroFonseca13" target="_blank">GitHub</a>
+          <p>
+            Minha página no
+            <a href="https://github.com/PedroFonseca13" target="_blank"
+              >GitHub <img src="img/394187_github_icon.png" alt=""
+            /></a>
+          </p>
         </li>
         <li>
-          Meu perfil no
-          <a
-            href="https://www.linkedin.com/in/pedro-fonseca-402997a2/"
-            target="_blank"
-            >LinkedIn</a
-          >
+          <p>
+            Meu perfil no
+            <a
+              href="https://www.linkedin.com/in/pedro-fonseca-402997a2/"
+              target="_blank"
+              >LinkedIn</a
+            >
+            <img src="img/104493_linkedin_icon.png" alt="" />
+          </p>
         </li>
         <li>
-          Meu perfil no
-          <a href="https://twitter.com/Rikee_Fonseca" target="_blank"
-            >Twitter</a
-          >
+          <p>
+            Meu perfil no
+            <a href="https://twitter.com/Rikee_Fonseca" target="_blank"
+              >Twitter</a
+            >
+            <img src="img/104501_twitter_bird_icon.png" alt="" />
+          </p>
         </li>
       </ul>
     </section>
